# OSSM-hardware

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  OSFM Belt clamp top.stl  OSFM bearing mount wrap.stl  OSSM PlatformIO Readme.md  README-update-draft.md  README.md  README.rst  SUMMARY.md  manifest.json  temp.md  version.json
Analysis/: .gitignore  README.md  logs.txt  ossm_live_tracker.ipynb  ossm_tracker.py  plot_spline.py  plot_tracking.py  pyproject.toml  spline_samples_abc_ABC-000.csv  spline_samples_abc_ABC-000_feasible.csv  spline_samples_abc_ABC-000_speedchange.csv  spline_samples_abc_ABC-001.csv  spline_samples_abc_ABC-001_feasible.csv  spline_samples_abc_ABC-001_speedchange.csv  tracking_data_2026-01-27_15-03-13.csv  tracking_data_2026-01-27_15-06-51.csv  tracking_data_2026-01-27_15-07-27.csv  tracking_data_2026-01-27_15-21-47.csv  tracking_data_2026-01-27_16-44-28.csv  tracking_data_2026-01-28_00-06-25.csv  tracking_data_2026-01-28_00-08-06.csv  tracking_data_2026-01-28_00-12-07.csv  tracking_data_2026-01-28_00-49-24.csv  tracking_data_2026-01-28_00-59-06.csv  tracking_data_2026-01-28_01-18-59.csv  tracking_data_2026-01-28_01-27-03.csv  tracking_data_2026-01-28_01-27-27.csv  tracking_data_2026-01-28_02-13-05.csv  tracking_data_2026-01-28_02-17-42.csv  tracking_data_2026-01-28_02-20-14.csv  tracking_data_2026-01-31_18-39-58.csv  tracking_data_2026-01-31_21-34-29.csv
Analysis/live_tracker/: __init__.py  tracker.py  tracking.py  types.py
Analysis/output/: OSSM_SPEED_001_tracking_data.csv  OSSM_SPEED_050_tracking_data.csv  (+1 more)
(+2149 files in other folders)
