[project]
name = "ossm-analysis"
version = "0.1.0"
description = "Video analysis tool for tracking OSSM motion using OpenCV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = []
